# Plugin

./: .gitignore  plugin.proj
plugin/: CMakeLists.txt  plugin.proj
plugin/example/: CMakeLists.txt  ExamplePlugin.h  IPrint.h  IPrint2.h  main.cpp
plugin/example/plugin1/: CMakeLists.txt  Plugin1.h  Plugin1Info.cpp
plugin/example/plugin2/: CMakeLists.txt  Plugin2.h  Plugin2Info.cpp
plugin/include/: .Plugin.h.swp  IPlugin.h  Plugin.h  PluginManager.h  PluginManager.hpp  PluginUtils.h  Singleton.h
