PROJECT(Plugin1)
INCLUDE(CollectSrcs)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../include)

SET(Plugin_SUBDIRS .)
GET_SRCS(Plugin_SRCLISTS Plugin_SUBDIRS)
ADD_LIBRARY(Plugin1 ${Plugin_SRCLISTS})
TARGET_LINK_LIBRARIES(Plugin1 boost_thread)

INSTALL(TARGETS Plugin1
    LIBRARY DESTINATION bin
    ARCHIVE DESTINATION bin)
