PROJECT(Plugin2)
INCLUDE(CollectSrcs)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../include)

SET(Plugin_SUBDIRS .)
GET_SRCS(Plugin_SRCLISTS Plugin_SUBDIRS)
ADD_LIBRARY(Plugin2 ${Plugin_SRCLISTS})

INSTALL(TARGETS Plugin2
    LIBRARY DESTINATION bin
    ARCHIVE DESTINATION bin)
