PROJECT(Plugin2)
INCLUDE(CollectSrcs)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../include)

SET(Plugin_SUBDIRS .)
GET_SRCS(Plugin_SRCLISTS Plugin_SUBDIRS)
ADD_LIBRARY(Plugin2 ${Plugin_SRCLISTS})
TARGET_LINK_LIBRARIES(Plugin2 boost_thread)

INSTALL(TARGETS Plugin2
    LIBRARY DESTINATION bin
    ARCHIVE DESTINATION bin)
